# CNN-In-CPP-main

./: CMakeLists.txt  README.md  cnn_output.txt
include/: cnn.hpp  evaluate.hpp  neural_network.hpp
src/: cnn.cpp  cnn_main.cpp  evaluate.cpp  evaluate_main.cpp  neural_network.cpp  neural_network_main.cpp
